--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "companion-module-helvar",
-  "version": "0.0.1",
-  "main": "index.js",
-  "author": "renato.budiman07@gmail.com",
-  "license": "MIT",
-  "dependencies": {
-    "@companion-module/base": "^1.11.1"
-  },
-  "devDependencies": {
-    "@companion-module/tools": "^2.1.0"
-  }
+    "name": "companion-module-helvar",
+    "version": "0.0.1",
+    "main": "index.js",
+    "author": "renato.budiman07@gmail.com",
+    "license": "MIT",
+    "scripts": {
+        "package": "companion-module-build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/morning-bird/companion-module-helvar.git"
+    },
+    "dependencies": {
+        "@companion-module/base": "^1.11.1"
+    },
+    "devDependencies": {
+        "@companion-module/tools": "^2.1.0"
+    }
 }
