fungsi matikan dan nyalakan ups apc

--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -1,15 +1,15 @@
 {
-    "id": "helvar",
-    "name": "Helvar",
-    "shortname": "Helvar",
-    "description": "Helvar",
-    "manufacturer": "Helvar",
-    "products": ["Helvar"],
-    "keywords": ["Helvar"],
+    "id": "apc",
+    "name": "APC",
+    "shortname": "APC",
+    "description": "APC",
+    "manufacturer": "APC",
+    "products": ["APC"],
+    "keywords": ["APC"],
     "version": "0.0.1",
     "license": "MIT",
-    "repository": "git+https://github.com/bitfocus/companion-module-fake-module.git",
-    "bugs": "https://github.com/bitfocus/companion-module-fake-module/issues",
+    "repository": "git+https://github.com/morning-bird/companion-module-apc.git",
+    "bugs": "https://github.com/morning-bird/companion-module-apc/issues",
     "maintainers": [
         {
             "name": "Renato Budiman",
